# MinimalLLM

./: .gitignore  404.html  CNAME  README.md  index.html  options.html  parsing.html  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
assets/: 404.html-0b784b3d.js  404.html-12f83359.js  404.html-1711a623.js  404.html-741d81e2.js  app-06aa5770.js  app-1c2aa06c.js  app-4b88ea5f.js  app-b204f4f0.js  index.html-0d7e5493.js  index.html-68d5c70a.js  index.html-7b24be4c.js  index.html-9fefe55f.js  index.html-c66cb19a.js  index.html-d509db37.js  index.html-da3a032a.js  options.html-3dc9bfc5.js  options.html-87a20634.js  parsing.html-049d6137.js  parsing.html-6e39bcf0.js  parsing.html-8219fba7.js  parsing.html-98fd0dde.js  parsing.html-c69b132c.js  parsing.html-d704d59c.js
docs/: index.md  parsing.md
docs/.vuepress/: config.ts
examples/: cached_chat.py  cached_embedding.py  chat_and_parse.py  debug_log_for_chat.py
mllm/: __init__.py  chat.py  chat_logger.py  config.py  embedding.py  env_utils.py  provider_switch.py  special_models.py  structured_chat.py  utils.py
mllm/cache/: cache_embedding.py  cache_kv.py  cache_service.py  conn_pool.py
mllm/debug/: __init__.py  display.py  logger.py  show_table.py
mllm/display/: show_html.py
mllm/embed_search/: vector_store.py
scripts/: pypi_upload.sh
test/: pbar_in_streamlit.py  test_basic.py  test_cache.py  test_cache_env.py  test_conn_pool.py  test_embed.py  test_exceptions.py  test_gui.py  test_image.py  test_ipython.ipynb  test_parallel_map.py  test_parse.py  test_providers.py  test_schat.py
(+14 files in other folders)
