[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "MinimalLLM"
description = "Minimal toolkit for LLM"
version = "0.1.0"
authors = [
    { name = "Zijian Zhang" }
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools]
packages = ["mllm"]