[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "MinimalLLM"
description = "Minimal toolkit for LLM"
version = "1.2.1"
requires-python = ">=3.8"

authors = [
    { name = "Zijian Zhang" }
]
dynamic = ["dependencies"]

readme = "README.md"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.setuptools]
packages = ["mllm"]

[project.urls]
Homepage = "https://github.com/EvoEvolver/MinimalLLM"
Issues = "https://github.com/EvoEvolver/MinimalLLM/issues"